[package]
name = "bytecookie"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Prints a fortune message for engineers."
repository = "https://github.com/yoshi389111/bytecookie"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
flate2 = "1.1.2"
md5 = "0.8.0"
clap = { version = "4.5.41", features = ["derive", "env"] }
chrono = "0.4.41"

[build-dependencies]
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
flate2 = "1.1.2"
